--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,7 +16,8 @@
     "@gltf-transform/core": "^4.3.0",
     "@gltf-transform/extensions": "^4.3.0",
     "@luu-sac/shared": "*",
-    "@prisma/client": "^6.19.2",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "argon2": "^0.44.0",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
@@ -26,7 +27,7 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "prisma": "^6.19.2",
+    "pg": "^8.17.2",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "^3.8.1",
+    "prisma": "^7.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0"
