--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@luu-sac/shared",
   "version": "1.0.0",
-  "main": "index.ts"
+  "main": "index.ts",
+  "dependencies": {
+    "zod": "^4.3.6"
+  }
 }
