--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,7 +28,8 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "pg": "^8.17.2",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
