--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\""
   },
   "dependencies": {
+    "@google/model-viewer": "^4.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@luu-sac/shared": "*",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
