--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
+    "start": "node dist/index.js",
+    "db:migrate:deploy": "prisma migrate deploy",
     "lint": "eslint . --fix",
     "format": "prettier --write \"src/**/*.ts\""
   },
