--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,16 +4,11 @@
     "target": "ES2020",
     "outDir": "./dist",
     "rootDir": "./src",
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@luu-sac/shared": [
-        "../../packages/shared/index.ts"
-      ]
-    }
+    "moduleResolution": "node"
+
   },
   "include": [
     "src/**/*"
