--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@luu-sac/shared",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
   }
 }
