--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "gltf-pipeline": "^4.3.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
@@ -42,10 +43,12 @@
     "pg": "^8.17.2",
     "prisma": "^7.3.0",
     "sharp": "^0.34.5",
+    "three": "^0.172.0",
     "typescript": "^5.9.3",
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "@types/three": "^0.182.0",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
