--- a/render.yaml
+++ b/render.yaml
@@ -41,7 +41,4 @@ services:
       - key: NODE_ENV
         value: production
       - key: NEXT_PUBLIC_API_URL
-        fromService:
-          type: web
-          name: luu-sac-api
-          property: host
+        value: https://luu-sac-api.onrender.com/api
