--- a/render.yaml
+++ b/render.yaml
@@ -17,10 +17,7 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: CORS_ORIGIN
-        fromService:
-          type: web
-          name: luu-sac-web
-          property: host
+        value: https://luu-sac-web.onrender.com
       - key: CLOUDINARY_CLOUD_NAME
         sync: false
       - key: CLOUDINARY_API_KEY
