--- a/.env.api.example
+++ b/.env.api.example
@@ -19,3 +19,8 @@ CORS_ORIGIN=https://your-web-app.onrender.com
 CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
 CLOUDINARY_API_KEY=your-cloudinary-api-key
 CLOUDINARY_API_SECRET=your-cloudinary-api-secret
+
+# PayOS Payment Gateway (Get from: https://my.payos.vn)
+PAYOS_CLIENT_ID=your-payos-client-id
+PAYOS_API_KEY=your-payos-api-key
+PAYOS_CHECKSUM_KEY=your-payos-checksum-key
