--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,10 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
     "lint": "eslint . --fix",
     "format": "prettier --write \"src/**/*.ts\""
   },
@@ -18,6 +21,7 @@
     "@gltf-transform/core": "^4.3.0",
     "@gltf-transform/extensions": "^4.3.0",
     "@luu-sac/shared": "*",
+    "@payos/node": "^2.0.4",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@types/cookie-parser": "^1.4.10",
@@ -28,6 +32,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
+    "@types/three": "^0.182.0",
     "argon2": "^0.44.0",
     "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
@@ -44,7 +49,6 @@
     "prisma": "^7.3.0",
     "sharp": "^0.34.5",
     "three": "^0.172.0",
-    "@types/three": "^0.182.0",
     "typescript": "^5.9.3",
     "winston": "^3.19.0"
   },
