--- a/.env.web.example
+++ b/.env.web.example
@@ -5,3 +5,7 @@ NODE_ENV=production
 # API Backend URL - Set to your API service URL on Render
 # Example: https://luu-sac-api.onrender.com
 NEXT_PUBLIC_API_URL=https://your-api.onrender.com
+
+# TripoSR API URL - For AR 3D model generation
+# Example: https://triposr.your-domain.com or http://localhost:8000
+NEXT_PUBLIC_TRIPOSR_API_URL=http://localhost:8000
